sdk/containerinstance/arm-containerinstance/samples/v10/javascript/README.md
# @azure/arm-containerinstance client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for @azure/arm-containerinstance in some common scenarios.

| **File Name**                                                                                                                   | **Description**                                                                                                                                                                                                                                                                                                                                                                                                        |
| ------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [cgProfileCreateOrUpdateSample.js][cgprofilecreateorupdatesample]                                                               | create a CGProfile if it doesn't exist or update an existing CGProfile. x-ms-original-file: 2026-07-01/ContainerGroupProfileCreateOrUpdate_CreateConfidential.json                                                                                                                                                                                                                                                     |
| [cgProfileDeleteSample.js][cgprofiledeletesample]                                                                               | deletes a container group profile. x-ms-original-file: 2026-07-01/ContainerGroupProfilesDelete.json                                                                                                                                                                                                                                                                                                                    |
| [cgProfileGetByRevisionNumberSample.js][cgprofilegetbyrevisionnumbersample]                                                     | gets the properties of the specified revision of the container group profile in the given subscription and resource group. The operation returns the properties of container group profile including containers, image registry credentials, restart policy, IP address type, OS type, volumes, current revision number, etc. x-ms-original-file: 2026-07-01/ContainerGroupProfileGetByRevisionNumber.json             |
| [cgProfileGetSample.js][cgprofilegetsample]                                                                                     | get the properties of the specified container group profile. x-ms-original-file: 2026-07-01/ContainerGroupProfilesGet.json                                                                                                                                                                                                                                                                                             |
| [cgProfileListAllRevisionsSample.js][cgprofilelistallrevisionssample]                                                           | get a list of all the revisions of the specified container group profile in the given subscription and resource group. This operation returns properties of each revision of the specified container group profile including containers, image registry credentials, restart policy, IP address type, OS type volumes, revision number, etc. x-ms-original-file: 2026-07-01/ContainerGroupProfileListAllRevisions.json |
| [cgProfileUpdateSample.js][cgprofileupdatesample]                                                                               | update a specified container group profile. x-ms-original-file: 2026-07-01/ContainerGroupProfilesPatch.json                                                                                                                                                                                                                                                                                                            |
| [cgProfilesListByResourceGroupSample.js][cgprofileslistbyresourcegroupsample]                                                   | gets a list of all container group profiles under a resource group. x-ms-original-file: 2026-07-01/ContainerGroupProfilesListByResourceGroup.json                                                                                                                                                                                                                                                                      |
| [cgProfilesListBySubscriptionSample.js][cgprofileslistbysubscriptionsample]                                                     | gets a list of all container group profiles under a subscription. x-ms-original-file: 2026-07-01/ContainerGroupProfilesList.json                                                                                                                                                                                                                                                                                       |
| [containerGroupsCreateOrUpdateSample.js][containergroupscreateorupdatesample]                                                   | create or update container groups with specified configurations. x-ms-original-file: 2026-07-01/ContainerGroupCreateConfidential.json                                                                                                                                                                                                                                                                                  |
| [containerGroupsDeleteSample.js][containergroupsdeletesample]                                                                   | delete the specified container group in the specified subscription and resource group. The operation does not delete other resources provided by the user, such as volumes. x-ms-original-file: 2026-07-01/ContainerGroupsDelete.json                                                                                                                                                                                  |
| [containerGroupsGetOutboundNetworkDependenciesEndpointsSample.js][containergroupsgetoutboundnetworkdependenciesendpointssample] | gets all the network dependencies for this container group to allow complete control of network setting and configuration. For container groups, this will always be an empty list. x-ms-original-file: 2026-07-01/ContainerGroupsGetOutboundNetworkDependenciesEndpoints.json                                                                                                                                         |
| [containerGroupsGetSample.js][containergroupsgetsample]                                                                         | gets the properties of the specified container group in the specified subscription and resource group. The operation returns the properties of each container group including containers, image registry credentials, restart policy, IP address type, OS type, state, and volumes. x-ms-original-file: 2026-07-01/ContainerGroupsGetPriority.json                                                                     |
| [containerGroupsListByResourceGroupSample.js][containergroupslistbyresourcegroupsample]                                         | get a list of container groups in a specified subscription and resource group. This operation returns properties of each container group including containers, image registry credentials, restart policy, IP address type, OS type, state, and volumes. x-ms-original-file: 2026-07-01/ContainerGroupsListByResourceGroup.json                                                                                        |
| [containerGroupsListSample.js][containergroupslistsample]                                                                       | get a list of container groups in the specified subscription. This operation returns properties of each container group including containers, image registry credentials, restart policy, IP address type, OS type, state, and volumes. x-ms-original-file: 2026-07-01/ContainerGroupsList.json                                                                                                                        |
| [containerGroupsRestartSample.js][containergroupsrestartsample]                                                                 | restarts all containers in a container group in place. If container image has updates, new image will be downloaded. x-ms-original-file: 2026-07-01/ContainerGroupsRestart.json                                                                                                                                                                                                                                        |
| [containerGroupsStartSample.js][containergroupsstartsample]                                                                     | starts all containers in a container group. Compute resources will be allocated and billing will start. x-ms-original-file: 2026-07-01/ContainerGroupsStart.json                                                                                                                                                                                                                                                       |
| [containerGroupsStopSample.js][containergroupsstopsample]                                                                       | stops all containers in a container group. Compute resources will be deallocated and billing will stop. x-ms-original-file: 2026-07-01/ContainerGroupsStop.json                                                                                                                                                                                                                                                        |
| [containerGroupsUpdateSample.js][containergroupsupdatesample]                                                                   | updates container group tags with specified values. x-ms-original-file: 2026-07-01/ContainerGroupsUpdate.json                                                                                                                                                                                                                                                                                                          |
| [containersAttachSample.js][containersattachsample]                                                                             | attach to the output stream of a specific container instance in a specified resource group and container group. x-ms-original-file: 2026-07-01/ContainerAttach.json                                                                                                                                                                                                                                                    |
| [containersExecuteCommandSample.js][containersexecutecommandsample]                                                             | executes a command for a specific container instance in a specified resource group and container group. x-ms-original-file: 2026-07-01/ContainerExec.json                                                                                                                                                                                                                                                              |
| [containersListLogsSample.js][containerslistlogssample]                                                                         | get the logs for a specified container instance in a specified resource group and container group. x-ms-original-file: 2026-07-01/ContainerListLogs.json                                                                                                                                                                                                                                                               |
| [locationListCachedImagesSample.js][locationlistcachedimagessample]                                                             | get the list of cached images on specific OS type for a subscription in a region. x-ms-original-file: 2026-07-01/CachedImagesList.json                                                                                                                                                                                                                                                                                 |
| [locationListCapabilitiesSample.js][locationlistcapabilitiessample]                                                             | get the list of CPU/memory/GPU capabilities of a region. x-ms-original-file: 2026-07-01/CapabilitiesList.json                                                                                                                                                                                                                                                                                                          |
| [locationListUsageSample.js][locationlistusagesample]                                                                           | get the usage for a subscription x-ms-original-file: 2026-07-01/ContainerGroupUsage.json                                                                                                                                                                                                                                                                                                                               |
| [nGroupsCreateOrUpdateSample.js][ngroupscreateorupdatesample]                                                                   | create or update a NGroups resource. x-ms-original-file: 2026-07-01/NGroupsCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                         |
| [nGroupsDeleteSample.js][ngroupsdeletesample]                                                                                   | deletes the NGroups resource. x-ms-original-file: 2026-07-01/NGroupsDelete.json                                                                                                                                                                                                                                                                                                                                        |
| [nGroupsGetSample.js][ngroupsgetsample]                                                                                         | get the properties of the specified NGroups resource. x-ms-original-file: 2026-07-01/NGroupsGet.json                                                                                                                                                                                                                                                                                                                   |
| [nGroupsListByResourceGroupSample.js][ngroupslistbyresourcegroupsample]                                                         | gets a list of all NGroups resources under a resource group. x-ms-original-file: 2026-07-01/NGroupsListByResourceGroup.json                                                                                                                                                                                                                                                                                            |
| [nGroupsListSample.js][ngroupslistsample]                                                                                       | gets a list of all NGroups resources under a subscription. x-ms-original-file: 2026-07-01/NGroupsList.json                                                                                                                                                                                                                                                                                                             |
| [nGroupsRestartSample.js][ngroupsrestartsample]                                                                                 | restarts all container groups in the specified NGroups resource in place. If container image has updates, new image will be downloaded. x-ms-original-file: 2026-07-01/NGroupsRestart.json                                                                                                                                                                                                                             |
| [nGroupsStartSample.js][ngroupsstartsample]                                                                                     | starts all container groups in the specified NGroups resource. Compute resources will be allocated and billing will start. x-ms-original-file: 2026-07-01/NGroupsStart.json                                                                                                                                                                                                                                            |
| [nGroupsStopSample.js][ngroupsstopsample]                                                                                       | stops all container groups in the specified NGroups resource. Compute resources will be deallocated and billing will stop. x-ms-original-file: 2026-07-01/NGroupsStop.json                                                                                                                                                                                                                                             |
| [nGroupsUpdateSample.js][ngroupsupdatesample]                                                                                   | update a specified NGroups resource. x-ms-original-file: 2026-07-01/NGroupsUpdate.json                                                                                                                                                                                                                                                                                                                                 |
| [operationsListSample.js][operationslistsample]                                                                                 | list the operations for the provider x-ms-original-file: 2026-07-01/OperationsList.json                                                                                                                                                                                                                                                                                                                                |
| [sandboxGroupsConnectSample.js][sandboxgroupsconnectsample]                                                                     | get an access token and endpoint for connecting to the SandboxGroup. x-ms-original-file: 2026-07-01/SandboxGroupsConnect.json                                                                                                                                                                                                                                                                                          |
| [sandboxGroupsCreateOrUpdateSample.js][sandboxgroupscreateorupdatesample]                                                       | create a SandboxGroup x-ms-original-file: 2026-07-01/SandboxGroupsCreateOrUpdate.json                                                                                                                                                                                                                                                                                                                                  |
| [sandboxGroupsDeleteSample.js][sandboxgroupsdeletesample]                                                                       | delete a SandboxGroup x-ms-original-file: 2026-07-01/SandboxGroupsDelete.json                                                                                                                                                                                                                                                                                                                                          |
| [sandboxGroupsGetSample.js][sandboxgroupsgetsample]                                                                             | get a SandboxGroup x-ms-original-file: 2026-07-01/SandboxGroupsGet.json                                                                                                                                                                                                                                                                                                                                                |
| [sandboxGroupsListByResourceGroupSample.js][sandboxgroupslistbyresourcegroupsample]                                             | list SandboxGroup resources by resource group x-ms-original-file: 2026-07-01/SandboxGroupsListByResourceGroup.json                                                                                                                                                                                                                                                                                                     |
| [sandboxGroupsListBySubscriptionSample.js][sandboxgroupslistbysubscriptionsample]                                               | list SandboxGroup resources by subscription ID x-ms-original-file: 2026-07-01/SandboxGroupsListBySubscription.json                                                                                                                                                                                                                                                                                                     |
| [sandboxGroupsUpdateSample.js][sandboxgroupsupdatesample]                                                                       | update a SandboxGroup x-ms-original-file: 2026-07-01/SandboxGroupsUpdate.json                                                                                                                                                                                                                                                                                                                                          |
| [subnetServiceAssociationLinkDeleteSample.js][subnetserviceassociationlinkdeletesample]                                         | delete container group virtual network association links. The operation does not delete other resources provided by the user. x-ms-original-file: 2026-07-01/SubnetServiceAssociationLinkDelete.json                                                                                                                                                                                                                   |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node cgProfileCreateOrUpdateSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node cgProfileCreateOrUpdateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[cgprofilecreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/cgProfileCreateOrUpdateSample.js
[cgprofiledeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/cgProfileDeleteSample.js
[cgprofilegetbyrevisionnumbersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/cgProfileGetByRevisionNumberSample.js
[cgprofilegetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/cgProfileGetSample.js
[cgprofilelistallrevisionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/cgProfileListAllRevisionsSample.js
[cgprofileupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/cgProfileUpdateSample.js
[cgprofileslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/cgProfilesListByResourceGroupSample.js
[cgprofileslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/cgProfilesListBySubscriptionSample.js
[containergroupscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/containerGroupsCreateOrUpdateSample.js
[containergroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/containerGroupsDeleteSample.js
[containergroupsgetoutboundnetworkdependenciesendpointssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/containerGroupsGetOutboundNetworkDependenciesEndpointsSample.js
[containergroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/containerGroupsGetSample.js
[containergroupslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/containerGroupsListByResourceGroupSample.js
[containergroupslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/containerGroupsListSample.js
[containergroupsrestartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/containerGroupsRestartSample.js
[containergroupsstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/containerGroupsStartSample.js
[containergroupsstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/containerGroupsStopSample.js
[containergroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/containerGroupsUpdateSample.js
[containersattachsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/containersAttachSample.js
[containersexecutecommandsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/containersExecuteCommandSample.js
[containerslistlogssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/containersListLogsSample.js
[locationlistcachedimagessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/locationListCachedImagesSample.js
[locationlistcapabilitiessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/locationListCapabilitiesSample.js
[locationlistusagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/locationListUsageSample.js
[ngroupscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/nGroupsCreateOrUpdateSample.js
[ngroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/nGroupsDeleteSample.js
[ngroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/nGroupsGetSample.js
[ngroupslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/nGroupsListByResourceGroupSample.js
[ngroupslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/nGroupsListSample.js
[ngroupsrestartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/nGroupsRestartSample.js
[ngroupsstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/nGroupsStartSample.js
[ngroupsstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/nGroupsStopSample.js
[ngroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/nGroupsUpdateSample.js
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/operationsListSample.js
[sandboxgroupsconnectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/sandboxGroupsConnectSample.js
[sandboxgroupscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/sandboxGroupsCreateOrUpdateSample.js
[sandboxgroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/sandboxGroupsDeleteSample.js
[sandboxgroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/sandboxGroupsGetSample.js
[sandboxgroupslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/sandboxGroupsListByResourceGroupSample.js
[sandboxgroupslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/sandboxGroupsListBySubscriptionSample.js
[sandboxgroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/sandboxGroupsUpdateSample.js
[subnetserviceassociationlinkdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/containerinstance/arm-containerinstance/samples/v10/javascript/subnetServiceAssociationLinkDeleteSample.js
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-containerinstance
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/containerinstance/arm-containerinstance/README.md
